# RPI-DashWake

./: .gitignore  README.md  Requerimientos Proyecto Linux-3.xlsx  build-core.sh  install-dashwake.sh
Core/: CMakeLists.txt  main.c
Core/Modules/: btn_handler.c  btn_handler.h  dht11Driver.c  dht11Driver.h  force_ntp_sync.c  force_ntp_sync.h  ntp_over_http.c  ntp_over_http.h
Core/main/: __init__.py  button_imterrupt.py  global_vars.py  main.py
Core/test/: test.c  test_main.py
backend/: package.json  server.js
backend/db/: current-user.json  user-list.json
captive_portal/: index.html  package.json  pnpm-lock.yaml
captive_portal/src/: App.tsx  main.tsx
captive_portal/src/assets/: GeneralHeader.css  GeneralHeader.tsx
captive_portal/src/pages/: APConfig.css  APConfig.tsx  LoginPage.css  LoginPage.tsx  StaConfig.css  StaConfig.tsx
esp32_data_sensing/: README.md  dht11_mq7_data_catch.ino
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
page/: app.js  index.html  style.css
server/: requirements.txt  server.py
tmp/: ntp.json
